--- a/config/cable.yml
+++ b/config/cable.yml
@@ -1,10 +1,6 @@
 development:
-  adapter: async
-
-test:
-  adapter: test
+  adapter: solid_cable
+  silence_polling: true
 
 production:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: kizuna_lingua_production
+  adapter: solid_cable
